[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uv_fastapi"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A FastAPI application"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.urls]
"Homepage" = "https://github.com/example/uv_fastapi"
"Bug Tracker" = "https://github.com/example/uv_fastapi/issues"
